add relevant nocite citations

--- a/mainmatter/01_introduction.tex
+++ b/mainmatter/01_introduction.tex
@@ -51,6 +51,11 @@ This thesis will follow a 7 chapter structure. This section concludes the introd
 
 %%=========================================
 
-%%% include all citations
+%%% include all uncited works that we still want to cite
 
-
+\nocite{tsai2006review}
+\nocite{rodriguez2004mar}
+\nocite{tarique2009survey}
+\nocite{tao2004application}
+\nocite{zand2012wireless}
+\nocite{li2016multipath}
