--- a/mainmatter/04_approach.tex
+++ b/mainmatter/04_approach.tex
@@ -120,7 +120,7 @@ The algorithm shown in \ref{pof-alg} is the Basic POF algorithm, with a single a
 
 While the previous subsections have all considered requirements for determinism in an IP network, the issue of multipathing still remains. For a component which is backhauling over multiple links in an IP networks this means link and/or path selection is required. Traditionally, routers select links primarily based on their ability to route the packet to the destination, and secondarily based on various metrics, which can be defined by the administrator. Routing considerations are not made for the WAN Connector's scenario- it's purpose is to backhaul the traffic from the remote Campus Network deployment to the Core, where the network's own internet gateway can then perform the routing.
 
-At this point it is crucial to differentiate, again, between multihoming and multipathing. Multihomed hosts are able to select one of many links for their outgoing traffic's destination. In multipathing the same link may lead to multiple paths to \textit{different} destinations. When two multihomed hosts communicate with each other multiple different paths are opened up. Multipathing over the internet requires complex data collection about all the links in between the source and the destination, see \cite{ganichev2010yamr} for an example of such an implementation. This is because multipathing over the internet needs to choose paths with maximally edge-disjoint paths to achieve the best reliability, as well as maximally vertex-disjoint paths in order to reduce the load across all nodes on the path.
+At this point it is crucial to differentiate, again, between multihoming and multipathing. Multihomed hosts are able to select one of many links for their outgoing traffic's destination. In multipathing the same link may lead to multiple paths to \textit{different} destinations. When two multihomed hosts communicate with each other multiple different paths are opened up. Multipathing over the internet requires complex data collection about all the links in between the source and the destination, see \cite{ganichev2010yamr, apostolaki2021performance,} for examples of such implementations. This is because multipathing over the internet needs to choose paths with maximally edge-disjoint paths to achieve the best reliability, as well as maximally vertex-disjoint paths in order to reduce the load across all nodes on the path.
 
 The goal of this thesis is to use the link and/or path selection to provide determinism for the flows being backhauled. To this extent, the link selection algorithm must attempt to choose paths which can provide lower latency and jitter than the maximum allowed values of a given flow, as well as meeting the flow's minimum reliability requirements. Another consideration for multipath backhaul environments is that it is also possible to duplicate flows across two links (unlike in traditional backhaul scenarios). It is worth noting that while duplication cannot reduce latency it can improve reliability, since a flow which is duplicated across two paths is far less likely to experience packet loss.
 
