finish implementation chapter

--- a/backmatter/00_acronyms.tex
+++ b/backmatter/00_acronyms.tex
@@ -27,15 +27,18 @@
 \item[IPv4] Internet Protocol version 4
 \item[IPv6] Internet Protocol version 6
 \item[ISP] Internet Service Provider
+\item[JSON] JavaScript Object Notation
 \item[LAN] Local Area Network
 \item[LEO] Lower Earth Orbit
 \item[LTE] Long Term Evolution
 \item[MNO] Mobile Network Operator
+\item[MPTCP] MultiPath TCP
 \item[NF] Network Function
 \item[NPN] Non Public Network
 \item[NP] Nondeterministic Polynomial time 
 \item[NSA] non-standalone
 \item[NTN] Non Terrestrial Network
+\item[OS] Operating System
 \item[PCF] Policy Control Function
 \item[PFCP] Packet Forwarding Control Protocol
 \item[POEF] Packet Ordering and Elimination Function
