--- a/mainmatter/04_approach.tex
+++ b/mainmatter/04_approach.tex
@@ -162,48 +162,54 @@ At this point, one can take the skeleton structure proposed in section \ref{sec:
 
 \subsection{Path Selection Algorithm}
 
-Meeting the various requirements - jitter, latency, and delay - of a flow can be formulated as a multi-constrained QoS problem. Solving such a multi-constrained QoS problem via path selection is a binary optimization problem, and the key to deterministically meeting the flows requirements. The problem can be posed as: “select those paths on which to forward packets while making sure to satisfy the latency, jitter and reliability requirements of the given flow, and minimizing the overall weight of the paths used". The mathematical definition is as follows:
+Meeting the various requirements - jitter, latency, and delay - of a flow, via path selection, can be formulated as a multi-constrained QoS problem. Solving such a multi-constrained QoS problem is a binary optimization problem, and the key to deterministically meeting the flow's requirements. The problem can be posed like this: “select those paths on which to forward packets while making sure to satisfy the latency, jitter and reliability requirements of the given flow, and minimizing the overall weight of the paths used". The mathematical definition is as follows:
 
 \begin{gather}
 \label{algorithm}
-\text{Minimize } \sum_{i=1}^{P}w(x_i) \\
+\text{Minimize } \sum_{i=1}^{P}w(x_i) * x_i \\
 \text{Where,   } d(i) * x_i\le D \\
 j(i) * x_i \le J \\
 1 - \prod_{i=1}^{P}{ ( 1- r(i) * x_i ) } \ge R  \\
 \text{for } x_i \in \{0,1\}
 \end{gather}
 
-Here the variables $D$, $J$, and $R$ are the flow's delay, jitter, and reliability requirements, while the functions $d(i)$, $j(i)$, $r(i)$, $w(i)$ are the estimated delay, jitter, reliability, and weight of link $i$. The predicted values will usually just be the latest measurement, as recommended in \cite{akella2008performance}, however there is room here to use more advanced metrics to predict the future link quality and thus perform preemptive path switching in future work. The total number of paths is $P$. The $x_i$ variable indicates whether or not link $i$ shall be used. If a solution is found, then the flow's packets will be forwarded on each link $i$ where $x_i = 1$, and if no solution can be found which satisfies these conditions then the flow is rejected because its QoS cannot be guaranteed.
+Here the variables $D$, $J$, and $R$ are the flow's delay, jitter, and reliability requirements, while the functions $d(i)$, $j(i)$, $r(i)$, $w(i)$ are the estimated delay, jitter, reliability, and weight of link $i$. The predicted values will usually just be the latest measurement, as recommended in \cite{akella2008performance}, however there is room here to define more advanced functions to predict the future link quality and thus perform preemptive path switching. But this is a topic for future work. The total number of paths is $P$. The $x_i$ variable indicates whether or not link $i$ shall be used. If a solution is found, then the flow's packets will be forwarded on each link $i$ where $x_i = 1$. If no solution can be found which satisfies these conditions then the flow is rejected because its QoS cannot be guaranteed.
 
-It is worth noting that solving such problems is NP-Hard \cite{krentel1986complexity, }. However this hardness arises primarily because of equation 3.4, the equation for reliability (also the only non-linear equation). Due to this equation one must consider every possible combination of paths on which to forward, and the complexity is $O(2^n)$. This means, even though akella et. al \cite{akella2003measurement} have shown that multihomed approaches experience diminishing returns after more than 4 links, attempting to brute force the solution by limiting the number of outgoing interfaces to 4 still yields a very large problem space - in the worst case both WAN connectors could have 4 outgoing paths, leading to 16 possible paths and thus 65536 possible combinations to consider.
+It is worth noting that solving such problems is NP-Hard \cite{krentel1986complexity, }. However this hardness arises primarily because of equation 5.4, the equation for reliability, and also the only non-linear equation. Due to this equation's multiplicative nature one must consider every possible combination of paths on which to forward, and the complexity is $O(2^n)$ since that is the cardinality of the power set of the set of paths. This means, even limiting the number of outgoing interfaces to 4 (since akella et. al \cite{akella2003measurement} have shown that multihomed approaches experience diminishing returns after more than 4 links) still yields a large problem space. In the worst case both WAN connectors could have 4 outgoing links, leading to 16 possible paths between them, and thus $2^{16}$ possible combinations to consider.
 
-In order to further avoid the combinatorial explosion the problem needs to be parameterized even more. The first logical parameterization has already taken place by limiting the number of interfaces to 4. This can be expanded on by limiting duplication to only take place over disjoint interfaces. The reasoning behind this is that in a geographically distributed Campus 5G environment, and especially for environments featuring wireless backhaul (e.g. satellite), it is more likely that a link's reliability is most affected by the over the air transmission on the first hop. By performing this parameterization the problem space shrinks considerably, to just $2^4$ possible combinations of outgoing paths, but, because certain paths going out on the same interface are ignored, the optimality of the overall solution is gone. This is an acceptable trade off for quick computation, and reasonably strong guarantees on reliability. When choosing which path to include from a set of paths using the same outgoing link, only the path with the greatest reliability is taken into consideration so that the likelihood of rejecting a potentially viable flow is as low as possible.
+In order to further avoid the combinatorial explosion, the problem needs to be parameterized even more. The first logical parameterization has already taken place by limiting the number of interfaces to 4. This can be expanded on by limiting duplication to only take place over disjoint interfaces. The reasoning behind this is that in a geographically distributed 5G Campus network, and especially for environments featuring wireless backhaul (e.g. satellite), it is more likely that a path's reliability depends the most on the outgoing interface. By performing this parameterization the problem space shrinks considerably. However the optimality of the overall solution is gone, because paths going out of the same interface are ignored and these may have been the optimal decision. Ultimately though, this is an acceptable trade off for quicker computation, while retaining reasonably strong guarantees of reliability. When choosing a path from a set of paths that use the same outgoing link only the path with the greatest reliability is taken into consideration. That way the likelihood of inadvertently rejecting a potentially viable flow is kept low.
 
 \subsection{Packet Ordering and Elimination Function}
 
-Since it is possible for flows to be duplicated across multiple paths, it becomes a necessity to have a packet ordering and elimination function. To be able to re-order and de-duplicate packets means that their sequence numbers need to be tracked. This thesis' implementation will track the sequence number on a per flow basis, using the GTP “sequence number" field. This thesis uses it's variation of the DetNet POF specification's Basic POF algorithm, as presented in \ref{pof-alg}.
+Since it is possible for flows to be duplicated across multiple paths, it becomes a necessity to have a packet ordering and elimination function. To be able to re-order and de-duplicate packets means that their sequence numbers need to be tracked. This thesis' implementation will track the sequence number on a per flow basis, using the GTP “sequence number" field. This thesis uses it's variation of the DetNet POF specification's Basic POF algorithm, as presented in algorithm \ref{pof-alg}.
 
-\subsection{Internal Architecture}
+%\subsection{Internal Architecture}
 
-\subsubsection{Control - Data Plane Communication}
+\subsection{Control - Data Plane Communication}
 
-A protocol is desired which can provide reliable communication over multiple paths in order to communicate between the data plane and the control plane which is where the statistics are collected, flows are added or removed, and the multipath decisions are made. This is crucial, since in a geographically distributed campus 5G deployment it is unlikely that there will be a separate management or control network which uses different underlying network infrastructure than the data plane. Therefore link failure, as well as packet loss, on the link being used by the control plane must either be avoided or protected against. To this extent there are only two feasible options - either multipath TCP or SCTP. SCTP does support multihoming and quick failover when it detects a path is down \cite{sctp-spec, sctp-failover}, despite not being explicitly designed for multipathing, and is slightly easier to manage and configure than multipath TCP, which is why it was chosen for the data plane control plane interactions.
+A protocol is desired which can provide reliable communication over multiple paths in order to communicate between the data plane and the control plane. The data plane is where the statistics are collected, while the control plane is where flows are added or removed and the multipath decisions are calculated. A reliable, multipath protocol is crucial, since in a geographically distributed campus 5G deployment it is unlikely that there will be a separate management or control network which uses different underlying network infrastructure than the data plane. Therefore link failure, as well as packet loss, on the link being used by the control plane must either be avoided or protected against. To this extent there are only two feasible options - either multipath TCP (MPTCP) \footnote{https://www.multipath-tcp.org/} or Stream Transmission Control Protocol (SCTP). SCTP supports multihoming and quick failover when it detects a path is down \cite{sctp-spec, sctp-failover}, despite not being explicitly designed for multipathing, and, crucially, it easier to manage, configure, and install than MPTCP (especially on older host OS'es). This is why it was decided to use SCTP for the data plane and control plane interactions.
 
-\subsubsection{GTP Tunneling and Custom Header Extension}
+The communication between the control and the user plane uses JSON to encode and exchange information. See appendix \ref{appendix:format} for an example of this communication. At present there are only two types of messages defined. The control plane can send flow forwarding decisions to the data plane, and the data plane can send statistics (path latency, current usage of an interface, etc.) to the control plane.
 
-The tunneling protocol used between the two data plane instances of the WAN Connector will  be GTP version 1 \cite{3gpp.29.060}. The specification for GTP allows for the use of sequence numbers, as well as the use of extension headers. For the data plane communication there will always be an additional custom header sent which includes a timestamp taken by the sender. The timestamp is taken in microseconds. For the timestamp there are several options available within linux. The TAI clock in linux (representing the Atomic International Time) is used in this implementation because it does not have leap seconds, and so is a monotonic function, which is an important guarantee for time sensitive applications. An example of a packet capture of the WAN Connector using the custom header is included in the appendix \ref{appendix:gtp}.
+\subsection{GTP Tunneling and Custom Header Extension}
 
-Normally, in 64 bit linux systems, a timestamp takes up 16 bytes and consists of 8 bytes for the time in seconds since the epoch, and another 8 bytes for the nanoseconds. To reduce the footprint of the timestamp in the header, the seconds are represented with just 8 bytes, thus wrapping around the interval $[0,255]$. The receiver needs to take this into account, but is programmed to do so, and since the path delays are not realistically expected to ever exceed 3 seconds this is more than enough. The microseconds have a maximum value of $10^6$ and can be represented with just 24 bits. For Wide Area Networks and internet connections usually the latencies are on the order of milliseconds and as such microsecond precision is deemed to be sufficient.
+The tunneling protocol used between the two data plane instances of the WAN Connector will  be GTP version 1 \cite{3gpp.29.060}. The GTP specification allows for the use of sequence numbers, as well as the use of extension headers. For the data plane communication there will always be an additional custom extension header sent which includes a timestamp taken by the sender. The timestamp is taken in microseconds. For the format of the timestamp there are several options available within linux. The TAI clock (representing the Atomic International Time) is used in this implementation because it does not have leap seconds, and so is a monotonic function, which is an important guarantee for time sensitive applications. An example of a packet captured from the WAN Connector, with the custom extension header, is included in the appendix (\ref{appendix:gtp}).
 
-\subsubsection{Metric Collection}
+Normally, in 64 bit linux systems, a timestamp takes up 16 bytes and consists of 8 bytes for the time in seconds since the epoch, and another 8 bytes for the nanoseconds. To reduce the footprint of the timestamp in the header, the seconds are represented with just 1 byte, thus wrapping around the interval $[0,255]$. The receiver needs to take this into account, but is programmed to do so, and since the path delays are not expected to ever exceed 3 seconds this is more than enough. The nanosecond timestamp is converted to microseconds, and their maximum value of $10^6$ can be represented with just 24 bits. For Wide Area Networks and internet connections usually latencies are on the order of milliseconds and as such microsecond precision is deemed to be sufficient. This means that the 16 byte timestamp, which would represent a significant overhead if placed in the header of each packet, has been reduced to just 4 bytes.
 
-To be able to intelligently switch flows between paths, and to be able to know when this is required, it is necessary to collect the relevant metrics about latency, jitter, bandwidth usage, as well as packet loss. Packet loss can be detected via the sequence numbers, while delay and jitter can be calculated using the timestamps passed along in the GTP headers. These metrics are periodically reported to the control plane so that it can make its decisions on up to date data. Keeping a healthy overview over the state of each path requires periodic probing on these paths. This is especially important for detecting when paths become viable again, since these paths will not have any traffic on them while they are considered down, or if they have experienced high latency and/or jitter recently. The probes are sent once per period of reporting so that they have a minimal impact on the bandwidth usage.
+\subsection{Metric Collection}
 
-\subsubsection{Flow Descriptions, Flows, and Hashing}
+To be able to intelligently switch flows between paths, and to be able to know when this is required, it is necessary to collect the relevant metrics about latency, jitter, bandwidth usage, and packet loss. Packet loss can be detected via sequence numbers, while delay and jitter can be calculated using the timestamps passed along in the GTP headers. These metrics are periodically reported to the control plane so that it can make its decisions on up to date data. Keeping a healthy overview over the state of each path requires periodic probing on these paths. This is especially important for detecting when paths become viable again, since these paths will not have any traffic on them while they are considered down or if they have exhibited high latency and/or jitter recently. The probes are sent once per period of reporting so that they have a minimal impact on the bandwidth usage.
 
-Incoming packets need to be quickly mapped to their respective flows. It is common in network environments to perform flow hashing, in order to quickly lookup which flow incoming packets belong to. This approach makes sense here too. However, since 5G flow descriptions can apply to various IP and port ranges as well as matching based on the transport layer protocol it is not possible to hash an incoming flow and obtain the same hash as the flow description. Furthermore it is possible for a flow to match multiple different flow descriptions. In these cases the first matching flow description is taken. This implies some sort of ordered storage of flow descriptions will be required, as well as a method to quickly match packets to flows. The solution used here is to maintain a simple linked list of the known flow descriptions, and match packets to their flow descriptions, if the packet is unknown. For “known" packets, which have been matched to a flow description, these are hashed and stored in a table, alongside their flow descriptor and a list of paths on which the flow is supposed to be forwarded. This allows quick lookup for every subsequent packet, as well as making it simple to change which paths flows are meant to be forwarded on. One alternative to storing the flow descriptions in a linked list would be to store them in a tree, such as in \cite{tongaonkar2004fast}, sorted either by priority or ID or even by the hash value of the flow description. This method would provide a faster lookup of new, “unknown" packets, whose hashes don't yet match to a flow, but since new flows are not such a frequent event the additional complexity of implementing such a data structure may not be worth the gain in performance.
+An example of the message format the user plane uses to report these statistics to the control plane is contained in the appendix.
 
-It is important to make a good choice when selecting a hash function. Since the hashes used are only for the purpose of lookups it would not be recommendable to pick a hashing algorithm designed for use in cryptography. These algorithms are designed so that it is very difficult to reverse engineer the original value from the hash, and this may often make the computation of the hash more computationally intensive than when computing hash algorithms designed for looking up table entries. Lastly, for hashing algorithms it is desirable that they provide a healthy distribution, to reduce collisions. Collision reduction can also be affected by choice of hash table size- and in general it is usually recommended to use a prime number. In this implementation, the MurmurHash algorithm was chosen due to its strong performance for lookup-based hashing. Specifically, the MurmurHash3 \cite{appleby2012murmurhash3} version was chosen, and since it can generate 32 or 128 bit values - the exact sizes of IPv4 and IPv6 addresses - this simplifies the hashing implementation for IP flows. When a packet comes into the WAN connector it is hashed based on it's destination address, source address, destination port, source port, and finally the transport layer protocol number. If the packet was tunneled with a GTP header, the header is removed and the hash is performed on the tunneled packet, not on the GTP packet. If the hash does not match, the packets is compared to the list of existing flow descriptions. If the flow belongs to one of these descriptions then that decision is stored in the hash table.
+\subsection{Flow Descriptions, Flows, and Hashing}
+
+Incoming packets need to be quickly mapped to their respective flows. It is common in network environments to perform flow hashing, in order to quickly lookup which flow incoming packets belong to. This approach makes sense here too. However, since 5G flow descriptions can apply to various IP and port ranges as well as different transport layer protocols, it is not possible to hash an incoming flow and obtain the same hash as the flow description. Furthermore it is possible for a flow to match multiple different flow descriptions. In these cases the first matching flow description is taken. This implies some sort of ordered storage of flow descriptions will be required, as well as a method to quickly match packets to flows.
+
+The solution used here is to maintain a simple linked list of the known flow descriptions, and match packets to their flow descriptions if the packet is unknown. For known flows, which have been matched to a flow description, their hashes are stored in a table with their flow descriptor and a list of paths on which the flow is supposed to be forwarded. This allows quick lookup for every subsequent packet from that flow (since it will have the same hash), as well as making it simple to change which paths flows are meant to be forwarded on. One alternative to storing the flow descriptions in a linked list would be to store them in a tree, such as in \cite{tongaonkar2004fast}, sorted either by priority, ID, or even by the hash value of the flow description. This method would provide a faster lookup of new, “unknown" packets, whose hashes don't yet match to a flow, but since new flows are not such a frequent event the additional complexity of implementing such a data structure is not worth the gain in performance.
+
+It is important to make a good choice when selecting a hash function. Since the hashes will only be used for the purpose of looking up table entries it would not be recommendable to pick a cryptographic hashing algorithm. These algorithms are designed so that it is difficult to reverse engineer the original value from the hash, and this may often make the computation of the hash itself more computationally intensive than when computing hash algorithms designed for lookups. Lastly, for hashing algorithms it is desirable that they provide a healthy distribution, to reduce collisions. Collision reduction can also be affected by choice of hash table size- and in general it is usually recommended to use a prime number. In this implementation, the MurmurHash algorithm was chosen due to its strong performance for lookup-based hashing. Specifically, the MurmurHash3 \cite{appleby2012murmurhash3} version was chosen, and since it can generate 32 or 128 bit values - the exact sizes of IPv4 and IPv6 addresses - this simplifies the hashing implementation for IP flows. When a packet comes into the WAN connector it is hashed based on it's destination address, source address, destination port, source port, and finally the transport layer protocol number. If the packet was tunneled with a GTP header, the header is removed and the hash is performed on the tunneled packet, not on the GTP packet. If the hash does not match, the packet is compared to the list of existing flow descriptions. If the flow is found to belong to one of these descriptions then that decision is stored in the hash table.
 
 
 
