finish evaluation. just conclusion left

--- a/backmatter/00_acronyms.tex
+++ b/backmatter/00_acronyms.tex
@@ -7,6 +7,7 @@
 \item[3GPP] 3rd Generation Public Partnership Project
 \item[AMF] Access and Mobility Management Function
 \item[CAKE] Common Applications Kept Enhanced 
+\item[CDF] Cumulative Distribution Function
 \item[DN] Data Network
 \item[eBPF] enhanced Berkeley Packet Filter
 \item[eNB] enhanced NodeB
